--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,3 +17,14 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+// Breakpoints
+$break-medium: 768px;
+$break-large: 1024px;
+$break-max: 1168px;
+
+@mixin mobile {
+    @media (max-width: #{$break-large - 1px}) {
+        @content;
+    }
+}
