--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -12,11 +12,12 @@ $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66d9b;
 $red: #e3342f;
-$orange: #f6993f;
+$orange: #f4623a;
 $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+$black: #000000;
 
 // Breakpoints
 $break-medium: 768px;
