--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,61 +1,58 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url("https://fonts.googleapis.com/css?family=Nunito");
 
 // Variables
-@import 'variables';
+@import "variables";
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
 
-.masthead {
+.welcome-page-wrapper {
+    text-align: center;
     height: 100vh;
     padding-top: 10rem;
     padding-bottom: calc(10rem - 4.5rem);
-    background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("/images/bg-masthead.jpg");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-attachment: scroll;
-        background-size: cover;
-}
-.text-white {
-    color: #e6ebf1 !important;
-}
-.button-space{
-    margin: 10px;
-    padding: 1.25rem 2.25rem;
-    font-size: 0.85rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    border: none;
-    border-radius: 10rem;  
-}
-.btn-primary{
-    background-color: #f4623a;
-}
-
-
-.wrapper {
-    text-align: center;
-    margin-top: 20%;
-
+    background: linear-gradient(
+            to bottom,
+            rgba(92, 77, 66, 0.8) 0%,
+            rgba(92, 77, 66, 0.8) 100%
+        ),
+        url("/images/bg-masthead.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
     .heading {
         color: white;
-        margin-bottom: 3%;
+        margin-bottom: 2rem;
+        font-size: 2rem;
     }
-}
-@include mobile{
-    .masthead {
-        height: 100vh;
-        min-height: 20rem;
-        padding-top: 4.5rem;
-        padding-bottom: 0;
-      }
-      .button-space{
+    .welcome-button {
         padding: 1.25rem 2.25rem;
         font-size: 0.85rem;
         font-weight: 700;
         text-transform: uppercase;
         border: none;
         border-radius: 10rem;
-      }
+        margin: 10px;
+        color: $black;
+        background-color: e6ebf1;
+    }
+    .text-white {
+        color: #e6ebf1;
+    }
+
+    .btn-primary {
+        background-color: $orange;
+    }
+}
+@include mobile {
+    .welcome-page-wrapper {
+        .heading {
+            font-size: 4rem;
+        }
+        .welcome-button {
+            font-size: 2rem;
+        }
+    }
 }
