--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,7 +13,7 @@
   --purple: #9561e2;
   --pink: #f66d9b;
   --red: #e3342f;
-  --orange: #f6993f;
+  --orange: #f4623a;
   --yellow: #ffed4a;
   --green: #38c172;
   --teal: #4dc0b5;
@@ -6112,13 +6112,13 @@ a.badge-dark.focus {
   font-size: 1.35rem;
   font-weight: 700;
   line-height: 1;
-  color: #000;
+  color: #000000;
   text-shadow: 0 1px 0 #fff;
   opacity: 0.5;
 }
 
 .close:hover {
-  color: #000;
+  color: #000000;
   text-decoration: none;
 }
 
@@ -6297,7 +6297,7 @@ a.close.disabled {
   z-index: 1040;
   width: 100vw;
   height: 100vh;
-  background-color: #000;
+  background-color: #000000;
 }
 
 .modal-backdrop.fade {
@@ -6456,7 +6456,7 @@ a.close.disabled {
 .bs-tooltip-auto[x-placement^=top] .arrow::before {
   top: 0;
   border-width: 0.4rem 0.4rem 0;
-  border-top-color: #000;
+  border-top-color: #000000;
 }
 
 .bs-tooltip-right,
@@ -6475,7 +6475,7 @@ a.close.disabled {
 .bs-tooltip-auto[x-placement^=right] .arrow::before {
   right: 0;
   border-width: 0.4rem 0.4rem 0.4rem 0;
-  border-right-color: #000;
+  border-right-color: #000000;
 }
 
 .bs-tooltip-bottom,
@@ -6492,7 +6492,7 @@ a.close.disabled {
 .bs-tooltip-auto[x-placement^=bottom] .arrow::before {
   bottom: 0;
   border-width: 0 0.4rem 0.4rem;
-  border-bottom-color: #000;
+  border-bottom-color: #000000;
 }
 
 .bs-tooltip-left,
@@ -6511,7 +6511,7 @@ a.close.disabled {
 .bs-tooltip-auto[x-placement^=left] .arrow::before {
   left: 0;
   border-width: 0.4rem 0 0.4rem 0.4rem;
-  border-left-color: #000;
+  border-left-color: #000000;
 }
 
 .tooltip-inner {
@@ -6519,7 +6519,7 @@ a.close.disabled {
   padding: 0.25rem 0.5rem;
   color: #fff;
   text-align: center;
-  background-color: #000;
+  background-color: #000000;
   border-radius: 0.25rem;
 }
 
@@ -10899,7 +10899,7 @@ a.text-dark:focus {
   }
 
   .badge {
-    border: 1px solid #000;
+    border: 1px solid #000000;
   }
 
   .table {
@@ -10930,6 +10930,105 @@ a.text-dark:focus {
   .table .thead-dark th {
     color: inherit;
     border-color: #dee2e6;
+  }
+}
+
+.welcome-page-wrapper {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), white), url("/images/bg-masthead.jpg");
+  height: 100vh;
+  background-position: center;
+  background-repeat: repeat;
+  background-attachment: scroll;
+  background-size: cover;
+}
+
+.heading {
+  padding-top: 10rem;
+  padding-bottom: calc(5rem, - 4.5rem);
+  text-align: center;
+  color: white;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+}
+
+.button-pos {
+  position: relative;
+  margin-left: 40%;
+}
+
+.welcome-button {
+  padding: 1.25rem 2.25rem;
+  font-size: 0.85rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 10rem;
+  margin: 10px;
+  color: #000000;
+  background-color: e6ebf1;
+}
+
+.text-white {
+  color: #e6ebf1;
+}
+
+.btn-primary {
+  background-color: #f4623a;
+}
+
+/*Css of Job Post Page*/
+
+.job-post-wrapper {
+  padding: 4rem 15rem;
+}
+
+.section {
+  background-color: gainsboro;
+  position: relative;
+  display: inline-block;
+  border-radius: 3px;
+}
+
+.postdetails {
+  float: left;
+  width: 100%;
+  height: 20%;
+}
+
+.postdetails h3 {
+  margin-top: 17px;
+  margin-left: 21px;
+  font-weight: bold;
+}
+
+.job-inputs {
+  float: left;
+  width: 100%;
+  height: 80%;
+  padding: 1rem;
+}
+
+.space {
+  margin-bottom: 3rem;
+}
+
+.radio-label {
+  font-size: 16px ubuntu, sans-serif;
+  margin: 0px 16px 20px;
+  padding: 0px 0px 20px;
+}
+
+@media (max-width: 1023px) {
+  .welcome-page-wrapper {
+    height: 100vh;
+  }
+
+  .heading {
+    font-size: 4rem;
+  }
+
+  .welcome-button {
+    font-size: 2rem;
   }
 }
 
