--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,10 +10,11 @@
 .welcome-page-wrapper {
     background: linear-gradient(
             to bottom,
-            rgba(92, 77, 66, 0.8) 0%,
-            rgba(92, 77, 66, 0.8) 100%
+            rgba(0, 0, 0, 0),
+            rgba(255, 255, 255, 1)
         ),
         url("/images/bg-masthead.jpg");
+    height: 100vh;
     background-position: center;
     background-repeat: repeat;
     background-attachment: scroll;
