--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10985,7 +10985,6 @@ a.text-dark:focus {
 .section {
   background-color: gainsboro;
   position: relative;
-  display: inline-block;
   border-radius: 3px;
 }
 
@@ -11016,6 +11015,11 @@ a.text-dark:focus {
   font-size: 16px ubuntu, sans-serif;
   margin: 0px 16px 20px;
   padding: 0px 0px 20px;
+}
+
+.post-btn {
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
 @media (max-width: 1023px) {
