feat:implemented button component

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -20,11 +20,12 @@
     background-attachment: scroll;
     background-size: cover;
 }
+
 .heading {
     padding-top: 10rem;
     padding-bottom: calc(5rem, - 4.5rem);
     text-align: center;
-    color: white;
+    color: rgb(187, 179, 179);
     margin-bottom: 2rem;
     font-size: 2rem;
 }
