--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10946,7 +10946,7 @@ a.text-dark:focus {
   padding-top: 10rem;
   padding-bottom: calc(5rem, - 4.5rem);
   text-align: center;
-  color: white;
+  color: #bbb3b3;
   margin-bottom: 2rem;
   font-size: 2rem;
 }
