--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11008,13 +11008,12 @@ a.text-dark:focus {
 }
 
 .space {
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
 }
 
 .radio-label {
   font-size: 16px ubuntu, sans-serif;
-  margin: 0px 16px 20px;
-  padding: 0px 0px 20px;
+  margin: 0px 20px;
 }
 
 .post-btn {
