--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -79,12 +79,11 @@
     padding: 1rem;
 }
 .space {
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
 }
 .radio-label {
     font-size: 16px ubuntu, sans-serif;
-    margin: 0px 16px 20px;
-    padding: 0px 0px 20px;
+    margin: 0px 20px;
 }
 .post-btn {
     text-align: center;
