feat: created job-grid component

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -90,6 +90,61 @@
     margin-bottom: 1rem;
 }
 
+// css for job-grid-component//
+.job-lists {
+    padding: 16px 25px;
+    position: relative;
+    display: flex;
+    border: 1px solid #e5e5e5;
+    background: #fff;
+    overflow: hidden;
+    transition: all 0.4s ease-in-out;
+    border-radius: 3px;
+}
+
+.logo-section {
+    width: 20%;
+}
+.job-list-section {
+    width: 100%;
+    padding: 0px 0px 0px 30px;
+}
+.job-title {
+    color: #fa590f;
+    font-family: "Work Sans", sans-serif;
+    font-size: 20px;
+    // margin: 0px 20px 0px 50px;
+}
+
+.company-info {
+    color: #9f9f9f;
+    font-family: "Work Sans", sans-serif;
+    font-size: 16px;
+    padding-bottom: 3px;
+}
+.company-name {
+    margin: 0px 9px 0px 0px;
+}
+.company-info-details {
+    color: #9f9f9f;
+    font-family: "Work Sans", sans-serif;
+    font-size: 16px;
+    padding-bottom: 3px;
+}
+.location {
+    margin: 3px 24px 0px 0px;
+}
+.salary {
+    margin: 3px 24px 0px 0px;
+}
+.type {
+    margin: 3px 0px 0px 0px;
+}
+
+.photo {
+    min-width: 80px;
+}
+
 @include mobile {
     .welcome-page-wrapper {
         height: 100vh;
