--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -170,12 +170,10 @@
     font-size: 16px;
     padding-bottom: 3px;
 }
-.location {
+.common-margin {
     margin: 3px 24px 0px 0px;
 }
-.salary {
-    margin: 3px 24px 0px 0px;
-}
+
 .type {
     margin: 3px 0px 0px 0px;
 }
